Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/Carrier_Onboarding_Action__e.object-meta.xml
<CustomObject>
    <label>Carrier Onboarding Action</label>
    <pluralLabel>Carrier Onboarding Actions</pluralLabel>
</CustomObject>