Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/fields/Base64_Data__c.field-meta.xml
<CustomField>
    <fullName>Base64_Data__c</fullName>
    <label>Base64_Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>