Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/fields/Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Id__c</fullName>
    <label>Carrier_Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>