Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content_Document_Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>