Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document_Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>