Features/CarrierOnBoarding/force-app/main/default/objects/Carrier_Onboarding_Action__e/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File_Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>